Fix gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -202,7 +202,7 @@ h3 {
       "header stats stats stats";
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto auto auto;
-    gap: 1rem;
+    gap: 1.875rem;
     max-width: 69.375rem;
     margin-inline: auto;
   }
